# llm.cpp

./: CMakeLists.txt  README.md  main.cpp
chatllm/: CMakeLists.txt  JSON.h  audio_process.cpp  audio_process.h  backend.cpp  backend.cppm  basics.h  chat.cpp  chat.cppm  chat_encoders.cpp  chat_encoders.cppm  chatllm.cppm  custom_ops.cppm  layers.cpp  layers.cppm  main.cpp  models.cpp  models.cppm  tokenizer.cpp  tokenizer.h  unicode-data.cpp  unicode.cpp  unicode.h  vectorstore.cpp  vectorstore.h  vision_process.cpp  vision_process.h
chatllm/models/: base.cpp  base.cppm  models_priv.cpp  models_priv.cppm  qwen.cpp  qwen.cppm  qwen3_5.cpp  qwen_asr.cpp  qwen_asr.cppm  qwen_tts.cpp  qwen_tts.cppm
core/: CMakeLists.txt  MathFunctions.cppm  llm.cppm
core/src/: BinaryReader.cppm  MathFunctions.cxx  Util.cppm  context.cpp  ds.cppm  enum.cppm  gguf.cppm  llm.cpp  mysqrt.cppm  unicode.cpp  unicode.h
ggml/: CMakeLists.txt  alloc.cppm  allocator.cpp  backend.cpp  backend_registry.cpp  block.h  buffer.cpp  buffer.cppm  buffer_type.cpp  buffer_type.cppm  cgraph.cpp  config.h  config.h.in  context.cpp  ds.cppm  func.cpp  func.cppm  fused.cpp  fused.cppm  ggml.cppm  gguf.cpp  gguf.cppm  helper.h  host_buffer.cppm  inplace_vector.hpp  internal_ds.h  log.cpp  log.cppm  log.h  mdspan_helper.h  op.cpp  op.cppm  op_back.cpp  op_back.cppm  opt.cpp  opt.cppm  quants.cpp  quants.cppm  sched.cpp  stopwatch.cppm  (+7 more)
ggml/cpu/: CMakeLists.txt  aarch64.cppm  backend.cpp  backend.cppm  buffer.cppm  buffer_type.cpp  buffer_type.cppm  device.cpp  device.cppm  ds.cppm  from_float.cppm  func.cpp  func.cppm  helper.cppm  helper.h  plan.cpp  registry.cppm  to_float.cpp  to_float.cppm  traits.cppm  vec_dot.cpp  vec_dot.cppm
ggml/cpu/llamafile/: sgemm-ppc.h  sgemm.cpp  sgemm.cppm
ggml/cpu/op/: argmax.cpp  argsort.cpp  argsort.cppm  concat.cpp  concat.cppm  diag.cpp  diag.cppm  get_rows_back.cpp  leaky_relu.cpp  leaky_relu.cppm  mean.cpp  mean.cppm  norm.cpp  norm.cppm  norm_back.cpp  op.cppm  pool.cpp  pool.cppm  pool_back.cpp  relpos.cpp  relpos.cppm  repeat.cpp  repeat_back.cpp  repeat_back.cppm  scale.cpp  scale.cppm  silu_back.cpp  sum.cpp  sum_rows.cpp  sum_rows.cppm  unary.cpp  unary.cppm  upscale.cpp  upscale.cppm  win.cpp  win.cppm
ggml/cuda/: CMakeLists.txt  allreduce.cpp  allreduce.cppm  backend.cpp  backend.cppm  buffer.cpp  buffer.cppm  buffer_type.cpp  buffer_type.cppm  common.cpp  common.cu  common.cuh  common.h  config.cppm  cuda.cpp  cuda.cppm  cuda_config.h  cuda_config.h.in  cuda_pool.h  device.cpp  device.cppm  fused.cpp  fused.cppm  graph.cppm  op.cpp  op.cppm  reduce.cuh  registry.cpp  registry.cppm  utils.cpp  utils.cppm  vendor_constant.h
ggml/cuda/cu/: acc.cu  argmax.cu  argsort.cu  binbcast.cu  clamp.cu  common.cuh  compute_batched_ptrs.cu  concat.cu  conv-transpose-1d.cu  conv2d-dw.cu  conv2d-transpose.cu  convert.cu  convert.cuh  count-equal.cu  cpy-utils.cuh  cpy.cu  cross-entropy-loss.cu  cuda_func.h  dequantize.cuh  ds.h  fattn-common.cuh  fattn-mma-f16.cuh  fattn-tile-f16.cu  fattn-tile-f32.cu  fattn-wmma-f16.cu  fattn.cu  getrows.cu  gla.cu  im2col.cu  misc.cu  mma.cuh  mmv.cu  mmvq.cu  norm.cu  pad.cu  pool2d.cu  quantize.cu  rope.cu  scale.cu  set-rows.cu  (+10 more)
ggml/cuda/cuda_rt/12080/: e8m0_to_fp32.h  quantize_mmq_mxfp4.h
ggml/cuda/cuda_rt/no_12080/: e8m0_to_fp32.h  quantize_mmq_mxfp4.h
ggml/cuda/fused/: fused.h  moe-expert-reduce.cu  softcap.cu  topk-moe.cu
ggml/cuda/op/: .fattn-tile.cu.swp  acc.cu  add-id.cu  arange.cu  argmax.cu  argsort.cu  argsort_cub.cu  argsort_fallback.cu  binbcast.cu  clamp.cu  col2im-1d.cu  common.cuh  compute_batched_ptrs.cu  concat.cu  conv-transpose-1d.cu  conv2d-dw.cu  conv2d-transpose.cu  conv2d.cu  convert.cu  convert.cuh  count-equal.cu  cp-async.cuh  cpy-utils.cuh  cpy.cu  cross-entropy-loss.cu  cuda_func.h  cumsum.cu  dequantize.cuh  diag.cu  diagmask.cu  ds.h  dump.cu  fattn-common.cuh  fattn-mma-f16.cuh  fattn-tile-f16.cu  fattn-tile-f32.cu  fattn-tile.cu  fattn-tile.cuh  fattn-vec-f16.cuh  fattn-vec-f32.cuh  (+58 more)
ggml/cuda/vendors/: constant.h  cuda.h
ggml/examples/: CMakeLists.txt
ggml/examples/gpt-2/: CMakeLists.txt  common.cpp  common.cppm  main-alloc.cpp  main-batched.cpp  main-sched.cpp  quantize.cpp
ggml/examples/magika/: CMakeLists.txt  main.cpp
ggml/examples/simple/: CMakeLists.txt  simple-backend.cpp
ggml/os/: os.cppm  unix.cpp  win32.cpp
ggml/rpc/: CMakeLists.txt  backend.cpp  backend.cppm  buffer.cpp  buffer.cppm  buffer_type.cpp  buffer_type.cppm  device.cpp  device.cppm  ds.cppm  helper.cppm  rpc.cpp  rpc.cppm  rpc_server.cpp  rpc_server.cppm  socket.cpp  socket.cppm  transport.cpp  transport.cppm
ggml/stdexec/: CMakeLists.txt
ggml/tests/: CMakeLists.txt  mdspan.hpp  test-arange.cpp  test-backend-ops.cpp  test-conv-transpose.cpp  test-conv1d-dw-c1.cpp  test-conv1d-dw-c2.cpp  test-conv1d.cpp  test-conv2d-dw.cpp  test-conv2d.cpp  test-customop.cpp  test-dup.cpp  test-interpolate.cpp  test-mul-mat.cpp  test-mul-mat0.cpp  test-opt.cpp  test-pad-reflect-1d.cpp  test-pool.cpp  test-rel-pos.cpp  test-roll.cpp  test-timestep_embedding.cpp  test.cppm
table/: CMakeLists.txt  table.cpp
